@@ -6,5 +6,3 @@ To do
 * Add some sort of caching for getDoormatData and getDoormatTitle methods, or
   for the entire viewlet. Or at least get an idea of how expensive they are.
   Currently the viewlet computes the whole doormat each time it is rendered.
-
-* Correctly set internal / external class on link anchors.
